<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|top"
    tools:context=".OgretmenFragment">

    <EditText
        android:id="@+id/epostaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eposta_girisi"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="150dp"
        android:padding="14dp"/>

    <EditText
        android:id="@+id/sifreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sifre_girisi"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:padding="14dp"/>

    <Button
        android:id="@+id/girisButonu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris_butonu"
        android:textSize="18sp"
        android:padding="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sifreniMiUnuttun"
        android:gravity="center"
        android:text="@string/sifreniMiUnuttun"
        android:textColor="#455AD3"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/kayitOlTextView"
            android:gravity="center"
            android:text="@string/hesabin_yok_mu"
            android:textSize="20sp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/kayitOlaGitButonu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kayit_ol_butonu"
            android:textSize="18sp"
            android:padding="14dp" />

    </LinearLayout>
</LinearLayout>