<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".OgretmenKayitFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="40dp"
        android:src="@drawable/saglikyuvasiiki" />

    <EditText
        android:id="@+id/adSoyadEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adSoyad"
        android:inputType="text"
        android:textSize="20sp"
        android:padding="14dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/tcEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tc"
        android:inputType="number"
        android:textSize="20sp"
        android:padding="14dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/epostaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eposta_girisi"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:padding="14dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/sifreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sifre_girisi"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:padding="14dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/kayitOlButonu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kayit_ol_butonu"
        android:textSize="18sp"
        android:padding="14dp"/>

</LinearLayout>