<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|top"
    tools:context=".Fragments.OgrenciGirisFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="40dp"
        android:src="@drawable/saglikyuvasiiki" />

    <EditText
        android:id="@+id/epostaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eposta_girisi"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:padding="14dp"/>

    <EditText
        android:id="@+id/sifreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sifre_girisi"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:padding="14dp"/>

    <Button
        android:id="@+id/girisButonu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris_butonu"
        android:textSize="18sp"
        android:padding="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sifreniMiUnuttunTextView"
        android:gravity="center"
        android:text="@string/sifreniMiUnuttun"
        android:textColor="#455AD3"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/hesabinYokMuTextView"
            android:gravity="center"
            android:text="@string/hesabin_yok_mu"
            android:textColor="#455AD3"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/kayitOlaGitButonu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kayit_ol_butonu"
            android:textSize="18sp"
            android:padding="14dp" />

    </LinearLayout>


</LinearLayout>